tests/compile_tests/environ/set_environ.output
BAR
VAL
DEF GHI
MNO PQR
ZZZ
[]
[]
Error 5 line 42 
